--- a/package.json
+++ b/package.json
@@ -11,13 +11,12 @@
   "dependencies": {
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "next": "15.1.6"
+    "next": "15.1.9"
   },
   "devDependencies": {
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
-    "eslint": "^9",
-    "eslint-config-next": "15.1.6",
-    "@eslint/eslintrc": "^3"
+    "eslint": "8.57.0",
+    "eslint-config-next": "15.1.9"
   }
 }
